tests/snapshots/snapshots/integration_test__error_missing_operand.snap
---
source: tests/integration_test.rs
expression: err_msg
---
"missing_operand.tw:1:16: Expected expression, found }\n   1 | fn foo() { 1 + }\n\n                     ^"
