tests/snapshots/snapshots/integration_test__error_unterminated_string.snap
---
source: tests/integration_test.rs
expression: err_msg
---
"unterminated_string.tw:2:11: Lexer error: UnterminatedString\n   2 |   println(\"unterminated\n\n                ^"
