tests/snapshots/snapshots/integration_test__precedence_call_precedence.snap
---
source: tests/integration_test.rs
expression: ast
---
SourceFile {
    items: [
        Stmt(
            Expr(
                Expr {
                    id: ExprId(
                        6,
                    ),
                    kind: Binary {
                        op: Add,
                        left: Expr {
                            id: ExprId(
                                2,
                            ),
                            kind: Call {
                                callee: Expr {
                                    id: ExprId(
                                        0,
                                    ),
                                    kind: Ident(
                                        "foo",
                                    ),
                                    span: 0:0..3,
                                },
                                args: [
                                    Expr {
                                        id: ExprId(
                                            1,
                                        ),
                                        kind: Literal(
                                            Int(
                                                1,
                                            ),
                                        ),
                                        span: 0:4..5,
                                    },
                                ],
                            },
                            span: 0:0..6,
                        },
                        right: Expr {
                            id: ExprId(
                                5,
                            ),
                            kind: Call {
                                callee: Expr {
                                    id: ExprId(
                                        3,
                                    ),
                                    kind: Ident(
                                        "bar",
                                    ),
                                    span: 0:9..12,
                                },
                                args: [
                                    Expr {
                                        id: ExprId(
                                            4,
                                        ),
                                        kind: Literal(
                                            Int(
                                                2,
                                            ),
                                        ),
                                        span: 0:13..14,
                                    },
                                ],
                            },
                            span: 0:9..15,
                        },
                    },
                    span: 0:0..15,
                },
            ),
        ),
    ],
    span: 0:0..15,
}
