tests/snapshots/snapshots/integration_test__precedence_right_associative_assignment.snap
---
source: tests/integration_test.rs
expression: ast
---
SourceFile {
    items: [
        Stmt(
            Expr(
                Expr {
                    id: ExprId(
                        4,
                    ),
                    kind: Binary {
                        op: Assign,
                        left: Expr {
                            id: ExprId(
                                0,
                            ),
                            kind: Ident(
                                "x",
                            ),
                            span: 0:0..1,
                        },
                        right: Expr {
                            id: ExprId(
                                3,
                            ),
                            kind: Binary {
                                op: Assign,
                                left: Expr {
                                    id: ExprId(
                                        1,
                                    ),
                                    kind: Ident(
                                        "y",
                                    ),
                                    span: 0:4..5,
                                },
                                right: Expr {
                                    id: ExprId(
                                        2,
                                    ),
                                    kind: Literal(
                                        Int(
                                            5,
                                        ),
                                    ),
                                    span: 0:8..9,
                                },
                            },
                            span: 0:4..9,
                        },
                    },
                    span: 0:0..9,
                },
            ),
        ),
    ],
    span: 0:0..9,
}
